--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "@ngrx/store": "^4.1.1",
     "@ngrx/store-devtools": "^4.1.1",
     "@ngx-translate/core": "^8.0.0",
+    "@swimlane/ngx-charts": "^7.0.1",
     "core-js": "^2.4.1",
+    "d3": "^4.12.0",
     "font-awesome": "^4.7.0",
     "rxjs": "5.5.2",
     "zone.js": "^0.8.14"
