--- a/nginx.conf
+++ b/nginx.conf
@@ -3,11 +3,15 @@ events {
 }
 
 http {
+
+  index index.html index.htm;
+
   server {
       listen 4200;
+      root /usr/share/nginx/html;
 
-      location / {
-        proxy_pass http://xx.xxx.xxx.xxx/api/;
+      location /api {
+        proxy_pass http://54.194.199.230:8080/api;
         proxy_set_header X-Forwarded-Host $host;
         proxy_set_header X-Forwarded-Server $host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
