--- a/nginx.conf
+++ b/nginx.conf
@@ -11,11 +11,16 @@ http {
       root /usr/share/nginx/html;
 
       location /api {
-        proxy_pass http://54.194.199.230:8080/api;
+        proxy_pass http://xx.xxx.xxx.xxx:8080/api;
         proxy_set_header X-Forwarded-Host $host;
         proxy_set_header X-Forwarded-Server $host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-
       }
+
+      location / {
+        try_files $uri $uri/ /index.html;
+      }
+
   }
+
 }
